--- a/pages/forget_password/forget_password.wxml
+++ b/pages/forget_password/forget_password.wxml
@@ -3,10 +3,10 @@
     <view class='title'>
       <text class='text_red'>*</text>修改密码:</view>
     <view class='list_a'>
-      <view class="section section_top">
+      <!-- <view class="section section_top">
         <view class="section_title">手机号码</view>
         <input name="harvester" placeholder="请输入手机号码" value="" bindinput="bindnewChange" />
-      </view>
+      </view> -->
       <view class="section">
         <view class="section_title">新的支付密码</view>
         <input name="harvester_password" placeholder="请输入新密码" value="" bindblur="bindoldChange" type="number" password />
@@ -21,11 +21,8 @@
         <view class="send_cold" bindtap="send_cold">{{btntext}}</view>
       </view>
     </view>
-
     <view class="btn-area">
-      <button form-type="submit" class='button-hovers' disabled="{{disabled}}">重置密码</button>
+      <button form-type="submit" class='button-hovers' disabled="{{false}}">确定</button>
     </view>
   </view>
-
-
 </form>
