--- a/pages/change/change.wxml
+++ b/pages/change/change.wxml
@@ -1,32 +1,26 @@
 <view>
-  
     <view class="list" bindtap="go_change_account">
-            <view class="tilte_text"> 当前账号</view>
-            <view class="content">
-                <image src="http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png" mode="widthFix" class="more" />
-            </view>
+        <view class="tilte_text">当前账号</view>
+        <view class="content">
+            <image src="http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png" mode="widthFix" class="more" />
         </view>
-        <view class="list" bindtap="go_change_name">
-                <view class="tilte_text">昵称</view>
-                <view class="content">
-                        <view class="context">{{user_name}}</view>
-                    <image src="http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png" mode="widthFix" class="more" />
-                </view>
-            </view>
-               <view class="list" >
-                <view class="tilte_text">我的邀请码</view>
-                <view class="content">
-                     <view class="context">0531</view>
-                </view>
-            </view>
-             <view class="list" >
-                <view class="tilte_text">朋友邀请码</view>
-                <view class="content">
-                
-                </view>
-            </view>
-            <view class="submit" >
-                保存
-            </view>
-
+    </view>
+    <view class="list" bindtap="go_change_name">
+        <view class="tilte_text">昵称</view>
+        <view class="content">
+            <view class="context">{{user_name}}</view>
+            <image src="http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png" mode="widthFix" class="more" />
+        </view>
+    </view>
+    <view class="list">
+        <view class="tilte_text">我的邀请码</view>
+        <view class="content">
+            <view class="context">0531</view>
+        </view>
+    </view>
+    <view class="list">
+        <view class="tilte_text">朋友邀请码</view>
+        <view class="content"></view>
+    </view>
+    <view class="submit">保存</view>
 </view>
