--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -82,8 +82,8 @@
             </view>
             <view class="exchange-price">
               <view>
-                <text>购入入仓时间：</text>
-                <text>2018.01.01 10:34</text>
+                <text>存茶到期时间：</text>
+                <text>2018.01.01</text>
               </view>
               <view>
                 <text>当前市场参考价：</text>
@@ -94,7 +94,11 @@
                 <text>￥20000/片</text>
               </view>
             </view>
-            <button class="out-storage" bindtap="outOfStock">出仓</button>
+            <view class="btns">
+              <button class="out-storage" bindtap="outOfStock">出仓</button>
+              <button type="warn" class="renew">续费</button>
+              <!-- <button type="primary" class="renew">续费</button> -->
+            </view>
           </view>
         </view>
       </view>
