--- a/pages/storage/view/view.wxss
+++ b/pages/storage/view/view.wxss
@@ -65,8 +65,10 @@ swiper.swiper-container{height: 93%;}
 .exchange-price text{font-size: 24rpx; color: #6b6b6b;}
 .exchange-price text.out-price{color: #D81E06;}
 .exchange-price>view{display: flex; justify-content: space-between; align-items: center; margin-bottom: 16rpx;}
-.out-storage{background-color: #00bbff; color: #fff; height: 70rpx; line-height: 70rpx; font-size: 32rpx;}
-
+.btns{display: flex; justify-content: space-between; font-size: 32rpx;}
+.btns button{ height: 70rpx; line-height: 70rpx;}
+.btns .out-storage{background-color: #00bbff; flex-basis: 65%; color: #fff;}
+.btns .renew{flex-basis: 30%;}
 /* 众筹 */
 .swiper-box{background-color: #000; box-sizing: border-box; height: 400rpx;}
 .swiper-box swiper{height: 160px;}
