--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -12,7 +12,7 @@
 </view>
 <swiper class="swiper-container" current="{{currentTab}}" duration="300" bindchange="swiperTab">
   <swiper-item class="overflowYauto">
-    <scroll-view>
+    <scroll-view style="margin-bottom: 50px;">
       <view class="gross-container">
         <view class="gross-item gross-title">总价值</view>
         <view class="gross-item gross-number">￥123456.00</view>
@@ -36,72 +36,79 @@
           </view>
         </view>
       </view>
-      <view class="storage-enviroment">
-        <view class="storage-name-box">
-          <image src="img/icon1.png" class="" />
-          <text class="storage-name">仓JB01</text>
-        </view>
-        <view class="enviroment-data-box">
-          <view class="enviroment-item item-video">
-            <image src="img/gif1.gif" class="icon-video" />
-            <text class="temperature">实时视频</text>
+      <!-- <block wx:for="{{2}}"> -->
+        <view class="storage-enviroment">
+          <view class="storage-name-box">
+            <image src="img/icon1.png" class="" />
+            <text class="storage-name">仓JB01</text>
           </view>
-          <view class="enviroment-item" bindtap="checkRealTimeData">
-            <image src="img/icon2.png" class="icon-temperature" />
-            <text class="temperature" style='color:#D9250E'>25.55°C</text>
-          </view>
-          <view class="enviroment-item" bindtap="checkRealTimeData">
-            <image src="img/u2173.png" class="icon-humidity" />
-            <text class="humidity" style='color:#669900'>78.99%</text>
-          </view>
-          <view>
-            <view class="more" bindtap="checkRealTimeData">
-              <image src="img/icon5.png" />
+          <view class="enviroment-data-box">
+            <view class="enviroment-item item-video">
+              <image src="img/gif1.gif" class="icon-video" />
+              <text class="temperature">实时视频</text>
             </view>
-          </view>
-        </view>
-      </view>
-      <view class="storage-manage">
-        <view class="storage-item">
-          <view class="item-left">
-            <image src="img/img1.png" class="display-img" />
-            <text class="tea-name">大观</text>
-            <text class="tea-date">生产日期：2018.08.09</text>
-            <view class="tag-box">
-              <text class="tag-text">北京仓</text>
-              <text class="tag-text">古树生茶</text>
+            <view class="enviroment-item" bindtap="checkRealTimeData">
+              <image src="img/icon2.png" class="icon-temperature" />
+              <text class="temperature" style='color:#D9250E'>25.55°C</text>
             </view>
-          </view>
-          <view class="item-right">
-            <view class="tea-stock">
-              <text class="stock-title">实时库存</text>
-              <text class="stock-num">11</text> 件
-              <text class="stock-num">11</text> 提
-              <text class="stock-num">11</text> 片
-              <text class="stock-more" bindtap="toStockDetail">详情></text>
+            <view class="enviroment-item" bindtap="checkRealTimeData">
+              <image src="img/u2173.png" class="icon-humidity" />
+              <text class="humidity" style='color:#669900'>78.99%</text>
             </view>
-            <view class="exchange-price">
-              <view>
-                <text>存茶到期时间：</text>
-                <text>2018.01.01</text>
+            <view>
+              <view class="more" bindtap="checkRealTimeData">
+                <image src="img/icon5.png" />
               </view>
-              <view>
-                <text>当前市场参考价：</text>
-                <text class="out-price">￥5000/片</text>
-              </view>
-              <view>
-                <text>您的初始购入价：</text>
-                <text>￥20000/片</text>
-              </view>
-            </view>
-            <view class="btns">
-              <button class="out-storage" bindtap="outOfStock">出仓</button>
-              <button type="warn" class="renew">续费</button>
-              <!-- <button type="primary" class="renew">续费</button> -->
             </view>
           </view>
         </view>
-      </view>
+        <!-- <block wx:for="{{3}}"> -->
+          <view class="storage-manage">
+            <view class="storage-item">
+              <view class="item-left">
+                <image src="img/img1.png" class="display-img" />
+                <text class="tea-name">大观</text>
+                <text class="tea-date">生产日期：2018.08.09</text>
+                <view class="tag-box">
+                  <text class="tag-text">北京仓</text>
+                  <text class="tag-text">古树生茶</text>
+                </view>
+              </view>
+              <view class="item-right">
+                <view class="tea-stock">
+                  <text class="stock-title">实时库存</text>
+                  <text class="stock-num">11</text>
+                  件
+                  <text class="stock-num">11</text>
+                  提
+                  <text class="stock-num">11</text>
+                  片
+                  <text class="stock-more" bindtap="toStockDetail">详情></text>
+                </view>
+                <view class="exchange-price">
+                  <view>
+                    <text>存茶到期时间：</text>
+                    <text>2018.01.01</text>
+                  </view>
+                  <view>
+                    <text>当前市场参考价：</text>
+                    <text class="out-price">￥5000/片</text>
+                  </view>
+                  <view>
+                    <text>您的初始购入价：</text>
+                    <text>￥20000/片</text>
+                  </view>
+                </view>
+                <view class="btns">
+                  <button class="out-storage" bindtap="outOfStock">出仓</button>
+                  <button type="warn" class="renew">续费</button>
+                  <!-- <button type="primary" class="renew">续费</button> -->
+                </view>
+              </view>
+            </view>
+          </view>
+        <!-- </block> -->
+      <!-- </block> -->
     </scroll-view>
   </swiper-item>
   <swiper-item class="overflowYauto">
@@ -168,10 +175,34 @@
     </scroll-view>
   </swiper-item>
 </swiper>
+<view class="mask"></view>
+<!-- 续费弹窗 -->
+<view class="renew-pop">
+  <view class="renew-close">×</view>
+  <view class="">
+    <view class="title">续费</view>
+    <view class="time-view">
+      <text class="subtit-text">入仓日期</text>
+      <text class="time-text">20190611</text>
+    </view>
+    <view class="time-view">
+      <text class="subtit-text">入仓日期</text>
+      <text class="time-text">20190611</text>
+    </view>
+    <view class="renew-time">
+      <text class="subtit-text">续费到期日期</text>
+      <text class="time-text">20200611</text>
+    </view>
+    <view class="renew-time">
+      <text class="subtit-text">新增续费年限</text>
+      <text class="time-text">20200611</text>
+    </view>
+  </view>
+  <view ></view>
+</view>
 <block wx:if="{{foot_is==2}}">
   <view class="hbj footmenu" style="background:{{footinfo.style.bgcolor}};position:fixed;left:0;bottom:0;width:100%;z-index:9998;border-top:2rpx solid {{footinfo.style.bordercolor}};" wx:if="{{footinfo.params.navstyle==0}}">
-    <view bindtap="redirectto" class="zbj submenu" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}" style="width:{{footinfo.style.bdr==1?(750-(footinfo.count-1)*2)/footinfo.count+'rpx':100/footinfo.count+'%'}};float:left;border-right:{{footinfo.style.bdr==1?'2rpx solid '+footinfo.style.bdrcolor:''}};padding:10rpx 0 6rpx;"
-      wx:for="{{footinfo.data}}">
+    <view bindtap="redirectto" class="zbj submenu" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}" style="width:{{footinfo.style.bdr==1?(750-(footinfo.count-1)*2)/footinfo.count+'rpx':100/footinfo.count+'%'}};float:left;border-right:{{footinfo.style.bdr==1?'2rpx solid '+footinfo.style.bdrcolor:''}};padding:10rpx 0 6rpx;" wx:for="{{footinfo.data}}">
       <span class="iconfont {{item.iconclass}}" style="color:{{item.change? footinfo.style.iconcoloron : footinfo.style.iconcolor}};font-size:{{footinfo.style.iconfont*2}}rpx;padding:{{footinfo.style.paddingtop*2}}rpx 0;width:{{footinfo.style.iconfont*2}}rpx;height:{{footinfo.style.iconfont*2}}rpx;line-height:{{footinfo.style.iconfont*2}}rpx;display:block;margin:0 auto"></span>
       <view style="font-size:{{footinfo.style.textfont*2}}rpx;padding:{{footinfo.style.paddingleft*2}}rpx 0;color:{{item.change? footinfo.style.textcoloron : footinfo.style.textcolor}};" wx:if="{{footinfo.params.textshow==1}}">
         {{item.text}}
@@ -179,8 +210,7 @@
     </view>
   </view>
   <view class="footmenu" style="background:{{footinfo.style.bgcolor}};position:fixed;left:0;bottom:0;width:100%;z-index:10000;border-top:2rpx solid {{footinfo.style.bordercolor}};" wx:elif="{{footinfo.params.navstyle==1}}">
-    <view bindtap="redirectto" class="zbj submenu" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}" style="width:{{footinfo.style.bdr==1?(750-(footinfo.count-1)*2)/footinfo.count+'rpx':100/footinfo.count+'%'}};float:left;border-right:{{footinfo.style.bdr==1?'2rpx solid '+footinfo.style.bdrcolor:''}};padding:10rpx 0 6rpx;"
-      wx:for="{{footinfo.data}}">
+    <view bindtap="redirectto" class="zbj submenu" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}" style="width:{{footinfo.style.bdr==1?(750-(footinfo.count-1)*2)/footinfo.count+'rpx':100/footinfo.count+'%'}};float:left;border-right:{{footinfo.style.bdr==1?'2rpx solid '+footinfo.style.bdrcolor:''}};padding:10rpx 0 6rpx;" wx:for="{{footinfo.data}}">
       <image mode="widthFix" src="{{item.imgurl}}" style="display:block;margin:0 auto;width:{{footinfo.style.iconfont*2}}rpx;padding:{{footinfo.style.paddingtop*2}}rpx;"></image>
       <view style="font-size:{{footinfo.style.textfont*2}}rpx;color:{{item.change? footinfo.style.textcolor : footinfo.style.textcoloron}};padding:{{footinfo.style.paddingleft*2}}rpx 0;text-align:center" wx:if="{{footinfo.params.textshow==1}}">
         {{item.text}}
