--- a/pages/storage/view/view.wxss
+++ b/pages/storage/view/view.wxss
@@ -11,7 +11,9 @@
 view{overflow: initial !important;}
 page{height: 100%;}
 swiper.swiper-container{height: 93%;}
+.mask{position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5);}
 .overflowYauto{overflow-y: auto !important;}
+/* .overflowYauto scroll-view{margin-bottom: 50px;} */
 .hid-txt-two{overflow: hidden !important; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
 .hid-txt-one{overflow: hidden !important; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;}
 .swiper-tab{display: flex; width: 100%;border-bottom: 2rpx solid #ccc;text-align: center;height: 88rpx;line-height: 88rpx;}
