--- a/pages/storage/view/view.wxss
+++ b/pages/storage/view/view.wxss
@@ -107,4 +107,24 @@ swiper.swiper-container{height: 93%;}
 .right-project-info .project-price .join-project{background-color: #D53109; color: #fff;}
 .right-project-info .project-price .check-project{border: 1px solid #D53109; color: #D53109; background-color: transparent;}
 
+/* 续费弹窗 */
+.renew-pop{position: absolute; top: 40%; left: 50%; width: 90%; min-height: 200px; background-color: #fff; border-radius: 8px; transform: translate(-50%, -50%);}
+.renew-pop .renew-close{position: absolute; bottom: -50px; left: 50%; width: 30px; height: 30px; line-height: 22px; border: 2px solid #fff; color: #fff; border-radius: 50%;font-size: 28px; box-sizing: border-box; text-align: center; transform: translateX(-50%);}
+.bd{padding: 0 30px;}
+.bd .title{text-align: center; font-size: 20px; padding: 15px 0;}
+.bd{ font-size: 16px;}
+.bd .time-view .subtit-text{color: #00a0e6; font-weight: 700;}
+.bd .time-view .time-text{color: #949494;}
+.bd .renew-time .subtit-text{color: #821006; font-weight: 700;}
+.bd .renew-time .time-text{color: #821006;}
+.bd .time-view, .bd .renew-time{display: flex; align-items: center; justify-content: space-between; padding: 5px 0;}
+.bd .num-view{display: flex; align-items: center;}
+.bd .num-view text{display: inline-block; width: 35px; height: 30px; line-height: 28px; border: 1px solid #ccc; box-sizing: border-box; text-align: center;}
+.bd .num-view input{border: 1px solid #ccc; border-left: 0; border-right: 0; width: 40px; height: 30px; box-sizing: border-box; text-align: center;}
+.bd .num-view .minus{border-top-left-radius: 3px; border-bottom-left-radius: 3px;}
+.bd .num-view .plus{border-top-right-radius: 3px; border-bottom-right-radius: 3px;}
+.fd{background-color: #ebebeb; height: 50px; margin-top: 15px; display: flex; align-items: center; justify-content: space-between; border-bottom-left-radius: 8px; border-bottom-right-radius: 8px; overflow: hidden !important;}
+.fd .renew-cost{padding-left: 20px; color: #111;}
+.fd .renew-cost text{color: #821006;}
+.fd .renew-btn{background-color: #821006; text-align: center; color: #fff; line-height: 50px; padding: 0 10px;}
 
