--- a/pages/code/code.wxml
+++ b/pages/code/code.wxml
@@ -6,7 +6,7 @@
       <view class='image'>
         <image src='{{information.share_url}}'></image>
       </view>
-      <view class='num_code'>码号:{{information.member_id}}</view>
+      <view class='num_code'>码号:{{information.dimension}}</view>
       <view class='tip'>温馨提示：分享二维码可获相应积分</view>
     </view>
 
