--- a/pages/account/account.wxml
+++ b/pages/account/account.wxml
@@ -14,39 +14,39 @@
           <view class="assets_management_title"> 资产管理</view>
           <view class="table" >
               <view class="box" bindtap="go"  data-src="../identity_authentication/identity_authentication">
-                <image src="img/u9491.png"  class="ico" />
+                <image src="http://ptcb077mt.bkt.clouddn.com/u9491.png"  class="ico" />
                 <text class="text">身份认证</text>
               </view>
                 <view class="box"  bindtap="go"  data-src="../card/card">
-                <image src="img/u9479.png"  class="ico" />
+                <image src="http://ptcb077mt.bkt.clouddn.com/u9479.png"  class="ico" />
                 <text class="text">银行卡管理</text>
               </view>
                 <view class="box"  bindtap="go"  data-src="../recharge/recharge" >
-                <image src="img/u9489.png"  class="ico" />
+                <image src="http://ptcb077mt.bkt.clouddn.com/u9489.png"  class="ico" />
                 <text class="text">充值</text>
               </view>
                 <view class="box"  bindtap="go"  data-src="../withdrawal/withdrawal">
-                <image src="img/u9493.png"  class="ico" />
+                <image src="http://ptcb077mt.bkt.clouddn.com/u9493.png"  class="ico" />
                 <text class="text">提现</text>
               </view>
               <view class="box"  bindtap="go"  data-src="../bill/bill">
-                <image src="img/u9483.png"  class="ico" />
+                <image src="http://ptcb077mt.bkt.clouddn.com/u9483.png"  class="ico" />
                 <text class="text">账单</text>
               </view >
                 <view class="box"   bindtap="go"  data-src="../integral_record/integral_record">
-                <image src="img/u9499.png"  class="ico" />
+                <image src="http://ptcb077mt.bkt.clouddn.com/u9499.png"  class="ico" />
                 <text class="text">积分</text>
               </view>
                   <view class="box"  bindtap="go"  data-src="../integral_center/integral_center">
-                <image src="img/u9495.png"  class="ico" />
+                <image src="http://ptcb077mt.bkt.clouddn.com/u9495.png"  class="ico" />
                 <text class="text">积分商城</text>
               </view>
               <view class="box"  bindtap="go"   data-src="../coupon/coupon">
-                <image src="img/u9517.png"  class="ico" />
+                <image src="http://ptcb077mt.bkt.clouddn.com/u9517.png"  class="ico" />
                 <text class="text">优惠券</text>
               </view>
               <view class="box"  bindtap="go"   data-src="../forget_password/forget_password">
-                <image src="img/u8288.png"  class="ico" />
+                <image src="http://ptcb077mt.bkt.clouddn.com/u8288.png"  class="ico" />
                 <text class="text">支付密码</text>
               </view>
 
