--- a/pages/card/card.wxml
+++ b/pages/card/card.wxml
@@ -1,22 +1,28 @@
-<!--pages/card/card.wxml-->
-<!--pages/select_address/select_address.wxml-->
+<!-- pages/card/card.wxml -->
+<!-- pages/select_address/select_address.wxml -->
 <view class='all'>
-	<radio-group class="radio-group" bindchange="radioChange" wx:if="{{address.info!='没有填写地址记录'}}"  >
-		<view class='content_list' wx:for="{{card}}">
-			<view class='radio' wx:if="{{is}}">
-				<radio value="{{item.id}}" color='#fff'  checked="{{item.status==1?'true':''}}" data-id="{{item.status}}" />
-			</view>
-			  <view class="card_infor" style="width:{{width}}px"  bindtap="{{is_select_address}}" data-id="{{item.id}}">
-                <view class="bank"><text class="bank_title">开户行：</text><text class="bank_content" >{{item.bank_name}}</text></view>
-                <view class="bank_name"><text class="bank_title">开户名：</text><text class="bank_content" >{{item.account_name}}</text></view>
-                <view class="card_num"><text class="bank_title">卡号：</text><text class="bank_content" >{{item.bank_card}}</text> </view>
+  <radio-group class="radio-group" bindchange="radioChange" wx:if="{{address.info!='没有填写地址记录'}}">
+    <view class='content_list' wx:for="{{card}}">
+      <view class='radio' wx:if="{{is}}">
+        <radio value="{{item.id}}" color='#fff' checked="{{item.status==1?'true':''}}" data-id="{{item.status}}" />
       </view>
-					<image src='img/u9386.png' class='add_ico' data-id="{{item.id}}"  bindtap="go_change_card" mode="widthFix"></image>
-					<image src='img/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
-		  
-		</view>
-	
-	</radio-group>
-
-	<view class='add_address' bindtap='go_add_card'>新增银行卡</view>
+      <view class="card_infor" style="width:{{width}}px" bindtap="{{is_select_address}}" data-id="{{item.id}}">
+        <view class="bank">
+          <text class="bank_title">开户行：</text>
+          <text class="bank_content">{{item.bank_name}}</text>
+        </view>
+        <view class="bank_name">
+          <text class="bank_title">开户名：</text>
+          <text class="bank_content">{{item.account_name}}</text>
+        </view>
+        <view class="card_num">
+          <text class="bank_title">卡号：</text>
+          <text class="bank_content">{{item.bank_card}}</text>
+        </view>
+      </view>
+      <image src='http://ptcb077mt.bkt.clouddn.com/u9386.png' class='add_ico' data-id="{{item.id}}" bindtap="go_change_card" mode="widthFix"></image>
+      <image src='http://ptcb077mt.bkt.clouddn.com/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
+    </view>
+  </radio-group>
+  <view class='add_address' bindtap='go_add_card'>新增银行卡</view>
 </view>
