--- a/pages/contract/contract.wxml
+++ b/pages/contract/contract.wxml
@@ -9,6 +9,6 @@
             <text class="contract_num">C{{index + 1}}.</text>
             <text class="contract_name">《{{item.title}}》</text>
         </view>
-        <image class="more" src="img/more.png" mode="aspectFill"></image>
+        <image class="more" src="http://ptcb077mt.bkt.clouddn.com/more.png" mode="aspectFill"></image>
     </view>
 </view>
