--- a/pages/goods_detail/goods_detail.wxss
+++ b/pages/goods_detail/goods_detail.wxss
@@ -596,14 +596,22 @@ overflow:hidden;
 .purchasing {
   width:100%;
   height:100rpx;
-  background:linear-gradient(30deg, rgba(254, 171, 97, 1) 0%, rgba(254, 171, 97, 1) 0%, rgba(210, 65, 2, 1) 100%, rgba(210, 65, 2, 1) 100%);        font-weight: 400;
+  background:linear-gradient(30deg, rgba(254, 171, 97, 1) 0%, rgba(254, 171, 97, 1) 0%, rgba(210, 65, 2, 1) 100%, rgba(210, 65, 2, 1) 100%);    font-weight: 400;
   font-style: normal;
   font-size: 25rpx;
   color: #FFFFFF;
   display: flex;
   padding: 0 10rpx;
   align-items:center;
+  /* justify-content : center; */
+  /* text-align: center; */
 }
 .purchasing_view {
-  margin-right: 40rpx;
+  margin-right: 45rpx;
+}
+.aa {
+  display: flex;
+  align-items:center;
+  justify-content : center;
+  width:80%;
 }
