--- a/custom-tab-bar/index.wxss
+++ b/custom-tab-bar/index.wxss
@@ -1,5 +1,8 @@
 @import "../__wuBaseWxss__/1.wxss";
 @import "../__wuBaseWxss__/2.wxss";
+cover-view{
+  visibility: visible !important;
+}
 .tab-bar {
   position: fixed;
   bottom: 0;
